# meal-plan-app

./: CMakeLists.txt  CMakePresets.json  README.md
src/: grocery_aggregator.cpp  grocery_aggregator.h  grocery_panel.cpp  grocery_panel.h  history_manager.cpp  history_manager.h  main.cpp  main_window.cpp  main_window.h  meal_database.cpp  meal_database.h  meal_plan_panel.cpp  meal_plan_panel.h  meal_selector.cpp  meal_selector.h  recipe_panel.cpp  recipe_panel.h  types.h
